# onelogin-aws-cli

./: .coveragerc  .gitignore  .travis.yml  LICENSE  LICENSE.txt  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/actions/setup-env/: action.yml
.github/workflows/: release.yml  static-analysis.yml
onelogin_aws_cli/: __init__.py  __main__.py  __metadata__.py  argparse.py  cli.py  configuration.py  credentials.py  main.py  model.py  userquery.py
onelogin_aws_cli/credsource/: __init__.py  cli.py  default.py  oskeychain.py
onelogin_aws_cli/daemon/: __init__.py  foreground.py  server.py
onelogin_aws_cli/tests/: helper.py  test_MFACredentials.py  test__get_interrupt_handler.py  test_cli.py  test_configurationFile.py  test_credentialsSource.py  test_envDefault.py  test_foregroundProcess.py  test_missingCredentialException.py  test_oneLoginAWSArgumentParser.py  test_oneloginAWS.py  test_oneloginAWS_saml.py  test_osKeychainCredentialsSource.py  test_section.py  test_serverHandler.py  test_signalRepr.py  test_userCredentials.py  test_user_choice.py  test_userquery.py
onelogin_aws_cli/tests/fixtures/: SAML_SINGLE_ROLE.xml  mock_saml_assertion_multi_role.xml  mock_saml_assertion_single_role.xml  saml_multi_role.xml
scripts/: build.sh
