[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.18"
name = "onelogin_aws_cli"
authors = [{ name = "Cameron Marlow", email = "cameron@physera.com" }]
description = "Onelogin assume AWS role through CLI"
requires-python = ">=3.7.0"
keywords = ["onelogin", "aws", "cli"]
license = { file = "LICENSE" }
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Security',
    'Topic :: System :: Systems Administration :: Authentication/Directory',
]
dynamic = ["readme"]
dependencies = [
    "boto3 >= 1.24.46, <2",
    "onelogin >= 2.0.4, <3",
    "keyring >= 23.8.0, <24",
    "requests >= 2.28.1, <3",
]

[project.optional-dependencies]
test = [
    "flake8==5.0.4",
    "pytest-cov==3.0.0",
    "pytest==7.1.2",
    "build==0.8.0",
    "twine==4.0.1",
]

[project.urls]
repository = "https://github.com/physera/onelogin-aws-cli"

[project.scripts]
onelogin-aws-login = "onelogin_aws_cli.cli:login"

[tool.setuptools]
py-modules = ["onelogin_aws_cli"]
zip-safe = false
packages = ["onelogin_aws_cli"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }
